@@ -76,6 +76,9 @@ static int st_dcshift_start(eff_t effp)
 {
     dcs_t dcs = (dcs_t) effp->priv;
 
+    if (dcs->dcshift == 0)
+      return ST_EFF_NULL;
+
     if (effp->outinfo.channels != effp->ininfo.channels)
     {
         st_warn("DCSHIFT cannot handle different channels (in=%d, out=%d)"
