@@ -59,6 +59,9 @@ static int st_repeat_start(eff_t effp)
 {
         repeat_t repeat = (repeat_t)effp->priv;
 
+        if (repeat->repeats == 1)
+          return ST_EFF_NULL;
+
         if ((repeat->fp = tmpfile()) == NULL) {
                 st_fail("repeat: could not create temporary file");
                 return (ST_EOF);
