@@ -164,6 +164,9 @@ static int st_stretch_start(eff_t effp)
     stretch_t stretch = (stretch_t) effp->priv;
     st_size_t i;
 
+    if (stretch->factor == 1)
+      return ST_EFF_NULL;
+
     /* not necessary. taken care by effect processing? */
     if (effp->outinfo.channels != effp->ininfo.channels)
     {
