@@ -94,6 +94,9 @@ static int st_vol_start(eff_t effp)
 {
     vol_t vol = (vol_t) effp->priv;
     
+    if (vol->gain == 1)
+      return ST_EFF_NULL;
+
     if (effp->outinfo.channels != effp->ininfo.channels)
     {
         st_warn("VOL cannot handle different channels (in=%d, out=%d)"
